# rust-captcha-verification

./: .env.example  .gitignore  Cargo.toml  DOKPLOY_DEPLOYMENT.md  Dockerfile  docker-compose.yml
.github/workflows/: production.yml  staging.yml
src/: error.rs  main.rs
