[package]
name = "rust-captcha-verification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["serde_derive"] }
serde_json = "1.0.104"
tokio = { version = "1.31.0", features = ["full"] }
