[package]
name = "rust-captcha-verification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
dotenv = "0.15"
lazy_static = "1.4"
regex = "1.12"
reqwest = { version = "0.12", features = ["json"] }
resend-rs = "0.19.0"
sentry = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
